# shops

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
client/src/components/: App.js
shops/: app.py  auth.py
shops/models/: product.py  shop.py  user.py
shops/routers/: auth.py  shops.py  users.py
shops/schemas/: base.py  product.py  shop.py  user.py
