[tool.poetry]
name = "shops"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
uvicorn = "^0.11.5"
fastapi = "^0.58.0"
mongoengine = "^0.20.0"
pydantic = "^1.5.1"
python-multipart = "^0.0.5"
pyjwt = "^1.7.1"
passlib = "^1.7.2"
bcrypt = "^3.1.7"
email-validator = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
